[gd_scene load_steps=2 format=3 uid="uid://d4mhe8clsfr08"]

[ext_resource type="Script" path="res://Scripts/UserInterfaseLogic.gd" id="1_1h2w6"]

[node name="UserInterfase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1h2w6")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BarsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/BarsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
show_percentage = false

[node name="Label" type="Label" parent="VBoxContainer/BarsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "22"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="VBoxContainer/BarsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 100.0
show_percentage = false
